move version to properties in pom.xml

--- a/Implementation/pom.xml
+++ b/Implementation/pom.xml
@@ -11,14 +11,27 @@
 
     <artifactId>Implementation</artifactId>
 
+    <properties>
+        <maven-jar-plugin-version>3.1.2</maven-jar-plugin-version>
+        <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
+        <maven-shade-plugin-version>3.2.1</maven-shade-plugin-version>
+        <dependency-check-maven-version>5.1.0</dependency-check-maven-version>
+        <maven-project-info-reports-plugin-version>2.9</maven-project-info-reports-plugin-version>
+    </properties>
 
     <build>
         <plugins>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin-version}</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>${maven-jar-plugin-version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -32,7 +45,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>${maven-shade-plugin-version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -40,7 +53,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <finalName>uber-${project.artifactId}-${project.version}}</finalName>
+                    <finalName>uber-${project.artifactId}-${project.version}</finalName>
                 </configuration>
             </plugin>
 
@@ -49,7 +62,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>5.1.0</version>
+                <version>${dependency-check-maven-version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -58,7 +71,22 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
+
+    <!-- this block is for mvn site -->
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>${maven-project-info-reports-plugin-version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${maven-surefire-plugin-version}</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
