--- a/Implementation/pom.xml
+++ b/Implementation/pom.xml
@@ -13,11 +13,9 @@
 
     <properties>
         <maven-jar-plugin-version>3.1.2</maven-jar-plugin-version>
-        <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
-        <maven-shade-plugin-version>3.2.1</maven-shade-plugin-version>
+        <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>        
         <dependency-check-maven-version>5.2.2</dependency-check-maven-version>
-        <maven-project-info-reports-plugin-version>2.9</maven-project-info-reports-plugin-version>
-        <dependency-check-skip>true</dependency-check-skip>
+        <maven-project-info-reports-plugin-version>2.9</maven-project-info-reports-plugin-version>        
     </properties>
 
     <build>
@@ -44,18 +42,19 @@
             </plugin>
 
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>${maven-shade-plugin-version}</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
                 <executions>
                     <execution>
+                        <id>make-assembly</id>
                         <phase>package</phase>
-                        <goals><goal>shade</goal></goals>
+                        <goals><goal>single</goal></goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <finalName>uber-${project.artifactId}-${project.version}</finalName>
-                </configuration>
             </plugin>
 
         </plugins>
