--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,12 @@
         <!-- maven plugins version -->
         <dependency-check-maven-version>5.2.2</dependency-check-maven-version>
         <maven-project-info-reports-plugin-version>2.9</maven-project-info-reports-plugin-version>
-        <maven-site-plugin-version>3.7</maven-site-plugin-version>
 
-        <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
+        <maven-surefire-report-version>2.22.1</maven-surefire-report-version>
         <maven-jar-plugin-version>3.1.2</maven-jar-plugin-version>
         <maven-assembly-plugin-version>3.2.0</maven-assembly-plugin-version>
         <maven-dependency-plugin-version>3.1.1</maven-dependency-plugin-version>
+        <maven-resources-plugin-version>3.0.2</maven-resources-plugin-version>
 
         <!-- common dependency version -->
         <snakeyaml-version>1.16</snakeyaml-version>
@@ -91,12 +91,6 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${maven-surefire-plugin-version}</version>
-                </plugin>
-
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -122,7 +116,7 @@
                     </executions>
                 </plugin>
 
-                <!-- The following block copy dependency to Package module/ lib folder -->
+                <!-- This plugin creates libraries and copy dependencies to Package module/ lib folder -->
                 <!-- https://stackoverflow.com/questions/8310539/
                      how-to-copy-dependencies-jars-without-test-jars-to-a-directory-using-maven
                 -->
@@ -131,7 +125,7 @@
                     <version>${maven-dependency-plugin-version}</version>
                     <executions>
                         <execution>
-                            <phase>package</phase>
+                            <phase>prepare-package</phase>
                             <goals>
                                 <goal>copy-dependencies</goal>
                             </goals>
@@ -142,6 +136,8 @@
                         </execution>
                     </executions>
                 </plugin>
+
+
             </plugins>
         </pluginManagement>
     </build>
