--- a/Package/pom.xml
+++ b/Package/pom.xml
@@ -7,8 +7,10 @@
         <groupId>tako.research</groupId>
         <version>${revision}</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>Package</artifactId>
+    <packaging>pom</packaging>
 
 </project>
